<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".presentation.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5"
        android:src="@drawable/welcome_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:contentDescription="@string/welcome" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="32sp"
        android:fontFamily="@font/helveticaneuebold"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textSize="22sp"
        android:fontFamily="@font/helveticaneueroman"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:textSize="16sp"
        android:textColor="@color/primary_500"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/helveticaneueroman"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/or"
        android:textColor="@color/neutral_600"
        android:layout_marginVertical="24dp"
        android:fontFamily="@font/helveticaneuelight"
        app:layout_constraintTop_toBottomOf="@id/bt_signup"
        app:layout_constraintBottom_toTopOf="@id/bt_signin"
        />

    <Button
        android:id="@+id/bt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/helveticaneuebold"
        android:backgroundTint="@color/primary_500"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>