<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    android:layout_marginBottom="24dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/primary_200"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="start"
                    android:text="@string/title"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/HelveticaNeueBold"/>

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/HelveticaNeueRoman"/>

                <TextView
                    android:id="@+id/tv_item_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/status"
                    android:textSize="12sp"
                    android:textColor="@color/neutral_600"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/HelveticaNeueRoman"/>

            </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>